[project]
name = "fast-api-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.fastapi]
entrypoint = "backend.main:app"